--- a/cfn/01_main_vpc_settings.yml
+++ b/cfn/01_main_vpc_settings.yml
@@ -224,7 +224,7 @@ Resources:
   Bastion:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: https://l2h-workshop.s3.ap-northeast-2.amazonaws.com/02_bastion_host.yml
+      TemplateURL: https://l2h-workshop.s3.ap-northeast-2.amazonaws.com/02_bastion_host.yml    ## <-- 여기를 변경하세요.
       TimeoutInMinutes: 60
       Parameters:
         BastionKeyName: !Ref KeyName
